# sudoku

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Sudoku.h
matrix/: Matrix.cpp  Matrix.h  MatrixPosition.cpp  MatrixPosition.h  MatrixValue.cpp  MatrixValue.h  RandomSet.cpp  RandomSet.h
ui/: GameBoard.cpp  GameBoard.h  ItemStackedWidget.cpp  ItemStackedWidget.h  MainWidget.cpp  MainWidget.h  MatrixItem.cpp  MatrixItem.h  MatrixWidget.cpp  MatrixWidget.h  NavigationWidget.cpp  NavigationWidget.h  NumberEditor.cpp  NumberEditor.h  NumberLabel.cpp  NumberLabel.h  SquareWidget.cpp  SquareWidget.h  StartBoard.cpp  StartBoard.h
